--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,33 @@
                 "--eval"
             ],
             "justMyCode": true
+        },
+        {
+            "name": "build hard mode task 1",
+            "type": "python",
+            "request": "launch",
+            "program": "main_open_world.py",
+            "pythonArgs": ["-u"],
+            "args": [
+                "--output_dir", "exps/hm_datasets",
+                "--dataset", "owod",
+                "--num_queries", "100",
+                "--PREV_INTRODUCED_CLS", "0",
+                "--CUR_INTRODUCED_CLS", "19",
+                "--data_root",  "./data/OWDETR",
+                "--train_set", "t1_train",
+                "--test_set", "t1_train",
+                "--num_classes", "81",
+                "--unmatched_boxes",
+                "--epochs", "45",
+                "--top_unk", "5",
+                "--featdim", "1024",
+                "--NC_branch",  "--nc_loss_coef", "0.1",  "--nc_epoch", "9" ,
+                "--backbone", "dino_resnet50", 
+                "--resume", "exps/OWDETR_t1/checkpoint0044.pth",
+                "--build_hard_mode_datasets"
+            ],
+            "justMyCode": true
         }
     ]
 }
